--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,147 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/preface-1.xhtml">Note to the First Edition</a>
+				</li>
+				<li>
+					<a href="text/preface-2.xhtml">Author’s Note</a>
+				</li>
+				<li>
+					<a href="text/part-1.xhtml">Part <span epub:type="z3998:roman">I</span></a>
+					<ol>
+						<li>
+							<a href="text/chapter-1-1.xhtml" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-2.xhtml" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-3.xhtml" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-4.xhtml" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-5.xhtml" epub:type="z3998:roman">V</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-6.xhtml" epub:type="z3998:roman">VI</a>
+						</li>
+						<li>
+							<a href="text/chapter-1-7.xhtml" epub:type="z3998:roman">VII</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/part-2.xhtml">Part <span epub:type="z3998:roman">II</span></a>
+					<ol>
+						<li>
+							<a href="text/chapter-2-1.xhtml" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-2.xhtml" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-3.xhtml" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-4.xhtml" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-5.xhtml" epub:type="z3998:roman">V</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-6.xhtml" epub:type="z3998:roman">VI</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-7.xhtml" epub:type="z3998:roman">VII</a>
+						</li>
+						<li>
+							<a href="text/chapter-2-8.xhtml" epub:type="z3998:roman">VIII</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/part-3.xhtml">Part <span epub:type="z3998:roman">III</span></a>
+					<ol>
+						<li>
+							<a href="text/chapter-3-1.xhtml" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-2.xhtml" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-3.xhtml" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-4.xhtml" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-5.xhtml" epub:type="z3998:roman">V</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-6.xhtml" epub:type="z3998:roman">VI</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-7.xhtml" epub:type="z3998:roman">VII</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-8.xhtml" epub:type="z3998:roman">VIII</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-9.xhtml" epub:type="z3998:roman">IX</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-10.xhtml" epub:type="z3998:roman">X</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/part-4.xhtml">Part <span epub:type="z3998:roman">IV</span></a>
+					<ol>
+						<li>
+							<a href="text/chapter-4-1.xhtml" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-2.xhtml" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-3.xhtml" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-4.xhtml" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-5.xhtml" epub:type="z3998:roman">V</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-6.xhtml" epub:type="z3998:roman">VI</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-7.xhtml" epub:type="z3998:roman">VII</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-8.xhtml" epub:type="z3998:roman">VIII</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-9.xhtml" epub:type="z3998:roman">IX</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-10.xhtml" epub:type="z3998:roman">X</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-11.xhtml" epub:type="z3998:roman">XI</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-12.xhtml" epub:type="z3998:roman">XII</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-13.xhtml" epub:type="z3998:roman">XIII</a>
+						</li>
+						<li>
+							<a href="text/chapter-4-14.xhtml" epub:type="z3998:roman">XIV</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,7 +168,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/part-1.xhtml" epub:type="bodymatter">Victory</a>
 				</li>
 			</ol>
 		</nav>
